--- a/_posts/2015-10-6-PLM-tests-2.markdown
+++ b/_posts/2015-10-6-PLM-tests-2.markdown
@@ -9,8 +9,8 @@ previous posts, now trying to answer the question - how do we either
 a) come up with a better approximation for the internal energy update 
 or b) at least come up with a switch that does not degrade the solution?
 
-Cholla seems to suffer only from diffusion in these tests, which isn't 
-a scenario we expect dual energy to improve. However, we certainly don't 
+Without dual energy, Cholla seems to suffer only from diffusion in these tests, 
+which isn't a scenario we expect dual energy to improve. However, we certainly don't 
 want to employ a dual energy method that makes the solution worse:
 
 Figure 1: PLMC, exact solver, no dual energy, $$v \approx 800 c_s$$
@@ -19,7 +19,11 @@ Figure 1: PLMC, exact solver, no dual energy, $$v \approx 800 c_s$$
 Figure 2: Same as Figure 1 but with dual energy
 <img src="{{ site.url }}assets/images/PLMC_exact_M800_de.png">
 
-So what can we do?
+Note: Previous versions of Figure 2 looked worse - I found a small bug 
+in the internal energy PLMC reconstruction that was allowing non-monotonic 
+reconstructions.
+
+**What can we do?**
 
 First, what happens if we get rid of the total energy synchronization?
 
@@ -27,11 +31,13 @@ Figure 3: Same as Figure 2 but without the total energy sync
 <img src="{{ site.url }}assets/images/PLMC_de_nosync.png">
 
 Now the internal energy update has no effect on the hydrodynamics, so the 
-perturbations in the velocity disappear. The pressure as calculated from the
-total energy (shown above) is also fine, but as calculated from the internal 
-energy (not shown) is the same as Figure 2. Interestingly, the internal energy 
-looks identical to that shown in Figure 2, despite the fact that the inputs to 
+perturbations in the velocity disappear. Similalry, the perturbations in the 
+pressure as calculated from the total energy (not shown) also vanish, but the 
+pressure as calculated from the internal energy (shown above) is as bad as 
+Figure 2, or maybe worse. The internal energy is not very different
+between Figure 2 and Figure 3, despite the fact that the inputs to 
 the internal energy update (the P, $$v_{i-1}$$, $$v_{i+1}$$ terms, etc.) should 
-be different now that they are not getting perturbed.
+be different now that they are not getting perturbed. This is probably just because 
+the perturbations are small in scale.
 
 What if I only use the advected flux portion of the internal energy update?
