--- a/_posts/2017-6-5-M82-models.markdown
+++ b/_posts/2017-6-5-M82-models.markdown
@@ -9,17 +9,15 @@ here's where things stand currently:
 * We have a working equilibrium model for the Milky Way with a hot, hydrostatic halo and a rotating disk in vertical hydrostatic equilibrium that is stable for a Gyr.
 * We have a working equilibrium model for M82 with the same structure.
 
-
 Specific parameters for the M82 model include:
-* A total disk mass of $$10^{10} M_\odot$$, derived by Greco (2012) using stellar rotation data from K-band absorption.
+* A total disk mass of $$10^{10} M_{\odot}$$, derived by Greco (2012) using stellar rotation data from K-band absorption.
 * A stellar disk scale length of 800 pc (Mayya 2009)
 * A stellar (thin) disk scale height of 150 pc (Lim 2013)
-* A virial radius of 53 kpc. This is based on the Kravstov (2013) linear fit between disk half-mass radius, and halo virial radius: $$R_\frac{1}{2} = 0.015 R_{200}$$, using disk scale length as an approximation for half-mass radius.
-* A virial mass of $$5\times 10^{10}$$ (this is a guess, roughly based on the $$v_\mathrm{max}$$-halo mass relationship in Maller & Bullock (2004).
+* A virial radius of 53 kpc. This is based on the Kravstov (2013) linear fit between disk half-mass radius and halo virial radius: $$R_{\frac{1}{2}} = 0.015 R_{200}$$, using disk scale length as an approximation for half-mass radius.
+* A virial mass of $$5 \times 10^{10}$$ (this is a guess, roughly based on the $$v_\mathrm{max}$$-halo mass relationship in Maller & Bullock (2004).
 * A gas disk mass of 0.25 * total disk mass, and gas disk scale length of twice the stellar disk scale length. These numbers should perhaps be adjusted. Greco (2012) estimates a gas fraction of 40%.
 
-
-The above parameters lead to a central surface density of $$\sim100 M_\odot / \mathrm{pc}^2$$, which is consistent with M82's observed central surface density. M82 also contains a central stellar bar, which considerably affects the shape of the stellar rotation curve in the inner kpc. Below is my fit to the stellar rotation curve of Greco (2012), using only the disk and halo components given above:
+The above parameters lead to a central surface density of $$\sim 100 M_{\odot} / \mathrm{pc}^2$$, which is consistent with M82's observed central surface density. M82 also contains a central stellar bar, which considerably affects the shape of the stellar rotation curve in the inner kpc. Below is my fit to the stellar rotation data of Greco (2012), using only the disk and halo components given above:
 
 <img src="{{ site.url }}assets/images/m82_rotation_curve.png">
 
@@ -34,11 +32,11 @@ Using Titan, I have evolved the disk above for 400 Myr (approximately 10 rotatio
 <video src="{{ site.url }}assets/movies/m82_eq_T_256.mov" width="400" height="400" controls preload></video>
 </div>
 
-These simulations are adiabatic, using an adiabtic index of 5/3. In order to prevent temperatures in the disk from going below $$10^3$$ K in the outer regions, I had to set the characteristic EOS temperature for the disk gas to $$2\times10^{5}$$ K, which is pretty high and leads to a pretty puffy disk. The characteristic temperature of the halo gas at the cooling radius is $$10^6$$ K (I haven't changed that from our MW model, maybe I should...).
+These simulations use an adiabtic index of 5/3. In order to prevent temperatures in the disk from going below $$10^{3}$$ K in the outer regions, I had to set the characteristic EOS temperature for the disk gas to $$2 \times 10^{5}$$ K, which is pretty high and leads to a pretty puffy disk. The characteristic temperature of the halo gas at the cooling radius is $$10^{6}$$ K (I haven't changed that from our MW model, maybe I should...).
 
 # The CC Outflow Model
 
-As a first test for driving an outflow, I ran a simulation exactly identical the the one above, but at each timestep, I added mass and energy according to the estimated values we used in Schneider & Robertson (2017) for the Chevalier & Clegg fit to M82. Specifically, within a spherical radius of 300 pc, I set $$\dot{M}_\odot = 2 M_\odot$$/yr, and $$\dot{E} = 10^{42}$$ erg/s. I ran two versions of this simulation, one at $$128^3$$ resolution and one at $$256^3$$ resolution.
+As a first test for driving an outflow, I ran a simulation exactly identical the the one above, but at each timestep, I added mass and energy according to the estimated values we used in Schneider & Robertson (2017) for the Chevalier & Clegg fit to M82. Specifically, within a spherical radius of 300 pc, I set $$\dot{M}_{\odot} = 2 M_{\odot}$$ /yr, and $$\dot{E} = 10^{42}$$ erg/s. I ran two versions of this simulation, one at $$128^3$$ resolution and one at $$256^3$$ resolution.
 
 Density and temperature projections for the $$128^3$$ simulation:
 <div style="text-align: center">
