--- a/_posts/2017-6-19-CC85-outflow-2.markdown
+++ b/_posts/2017-6-19-CC85-outflow-2.markdown
@@ -12,22 +12,19 @@ A lot has happened in the last 4 days. To quickly summarize:
 * The simulations are awesome.  
 <br>
 I'm dedicating a quick separate post to the first-order flux correction, so I'll skip those bullet points for now. The important part is that the fix seems pretty robust, and so far, has been able to completely eliminate negative temperatures and densities in the simulation. I haven't yet tested it with cooling...
-<br>
 
-### The Simulation
+The Simulation
 
 Using the same M82 setup that I've described previously, I've now successfully run three outflow simulations, with the resolution going from $$128^3$$ (78 pc) to $$512^3$$ (19.5 pc). I'm currently running a $$1024^3$$ simulation, but having weird I/O issues on Titan that are holding things up. Movies showing the projected density, projected temperature, and temperature slices of the $$512^3$$ run are below. For the feedback, I used parameters near the middle of the range of acceptable fits in Strickland & Heckman 2009. They are $$R_{*} = 300$$pc, $$\dot{M}_{\odot} = 2 M_{\odot}$$/yr, and $$\dot{E} = 2.6\times10^{42}$$erg/s. This corresponds to $$\beta = 1.4$$, $$\alpha = 0.9$$, and uses their assumed star formation rate of 4.7 $$M_\odot$$/yr.
 
 
 $$512^3$$ density projection:  
 <div style="text-align: center">
-<video src="{{ site.url }}assets/movies/m82_out_d_512.mov" width="400" height="800" controls preload></video>  
-<br>
+<video src="{{ site.url }}assets/movies/m82_out_d_512.mov" width="400" height="800" controls preload></video>
 $$512^3$$ temperature projection:  
-<video src="{{ site.url }}assets/movies/m82_out_T_512.mov" width="400" height="800" controls preload></video>  
-<br>
+<video src="{{ site.url }}assets/movies/m82_out_T_512.mov" width="400" height="800" controls preload></video>
 $$512^3$$ temperature slices:  
-<video src="{{ site.url }}assets/movies/m82_out_Tslice_512.mov" width="400" height="800" controls preload></video>  
+<video src="{{ site.url }}assets/movies/m82_out_Tslice_512.mov" width="400" height="800" controls preload></video>
 </div>
 <br>
 I haven't had time to do a whole lot of analysis, but I did check how well the outflow matches the analytic model along the z-axis, where it looks relatively unperturbed. The result is: strikingly well. Here's a plot showing various physical parameters with both the simulation data and the analytic solution:
