--- a/_posts/2021-2-8-MS-Tests-2.markdown
+++ b/_posts/2021-2-8-MS-Tests-2.markdown
@@ -20,10 +20,13 @@ Below are some movies showing the evolution of the color and temperature slices,
 <video src="{{ site.url }}assets/movies/2021-February/cslice.mov" width="512" height="256" controls preload></video>
 </div>
 <div style="text-align: center">
-<video src="{{ site.url }}assets/movies/2021-February/Tslice.mp4" width="512" height="256" controls preload></video>
+<video src="{{ site.url }}assets/movies/2021-February/Tslice.mov" width="512" height="256" controls preload></video>
 </div>
 <div style="text-align: center">
-<video src="{{ site.url }}assets/movies/2021-February/sd_z.mp4" width="512" height="256" controls preload></video>
+<video src="{{ site.url }}assets/movies/2021-February/vxlice.mov" width="512" height="256" controls preload></video>
+</div>
+<div style="text-align: center">
+<video src="{{ site.url }}assets/movies/2021-February/sd_z.mov" width="512" height="256" controls preload></video>
 </div>
 
 And here is a plot of the mass growth over time.
